k8s/Express-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    app: node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: node
          image: niemandx/pbr-server-kiska:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
