k8s/Express-LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: LoadBalancer
  selector:
    app: node
  ports:
    - name: node
      protocol: TCP
      port: 80
      targetPort: 4000
