k8s/Postgres-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  labels:
    app: postgres-sts
spec:
  ports:
    - port: 5432
      name: postgres
      targetPort: 5432
  clusterIP: None
  selector:
    app: postgres-sts

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sts
spec:
  serviceName: "postgres-headless"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-sts
  template:
    metadata:
      labels:
        app: postgres-sts
    spec:
      containers:
        - name: postgres
          image: postgres
          securityContext:
            runAsUser: 999
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: nfs-postgres
              #  subPath: pgdata
              mountPath: /var/lib/postgresql/data/
      volumes:
        - name: nfs-postgres
          persistentVolumeClaim:
            claimName: azure-managed-disk
