k8s/Postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: postgres-sts
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
