k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80 #4173
    protocol: TCP
    name: http
  selector:
    app: pickloria-client
